# anyrare-smart-contract

./: .env  .gitignore  Anchor.toml  README.md  hardhat.config.ts  keygen.json  package-lock.json  package.json
.github/workflows/: ci.yaml
app/src/: App.js  createKeypair.js  idl.json  keypair.json  nftToken.json  (+1 more)
contracts/: ARA.sol  ARAToken.sol  AnyRareDiamond.sol  BancorFormula.sol  BondingCurvedToken.sol  CollateralToken.sol  CollectionDataType.sol  CollectionFactory.sol  CollectionToken.sol  CollectionUtils.sol  EthBondingCurvedToken.sol  FractionalNFTToken.sol  Governance.sol  Hello.sol  ManagementFund.sol  Member.sol  Migrations.sol  NFT.sol  NFTDataType.sol  NFTFactory.sol  NFTTransferFee.sol  NFTUtils.sol  PolynomialCurvedToken.sol  Proposal.sol  ProposalDataType.sol  ProposalUtils.sol  Utils.sol
keygen/: ARANtuUsPtsXEK75fc9oJLWZzC8KK9TSthZUa38JZh3f.json  ARAbRErEZsWgn5sR6tbLKBvT4Zzn4GS4DhtvjsYy5cgv.json  ARAboEVZMwxNKZqwnRFdaiXEjXw6z52ZjkozDB8eEX8q.json  ARAodQyTU6LZ2etiP9bCC8X6n58WRsM1Vcpvwdo1pqMd.json  ARAxHrjrfA97UPa6XPmmDkQY34oqewtktrXpCnCJz823.json
programs/anyrare/: Cargo.toml
programs/anyrare/src/: lib.rs
scripts/: deploy.js  deploy.ts  initialPolicy.js
test/: araToken.js  araToken.ts  asset.js  bancorFormula.ts  collection.js  collection.ts  deploy.ts  diamondTest.js  governance.js  governance.ts  index.ts  initialPolicy.js  managementFund.ts  member.js  member.ts  memberFacet.js  nft.ts  proposal.ts
tests/: anchor-0.js  anyrare  anyrare.ts  anyrare_nft.ts  anyrare_serum.ts  anyrare_spl_token.ts  anyrare_spl_token_get_metadata.ts
(+75 files in other folders)
