[package]
description = "cashiers_check"
edition = "2018"
name = "cashiers_check"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "cashiers_check"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []

[dependencies]
anchor-lang = {version = "0.17.0"}
anchor-spl = {version = "0.17.0"}
solana-program = "1.7.11"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
